--- a/Shopping/src/main/webapp/WEB-INF/web.xml
+++ b/Shopping/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <!-- 配置字符过滤器 -->
-  <filter>
+    <filter>
         <filter-name>charsetFilter</filter-name>
         <filter-class>com.yc.shopping.filter.EncodingFilter</filter-class>
     </filter>
@@ -18,7 +18,21 @@
         <filter-name>charsetFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-  
+    <!-- spring 负责分发请求的 Servlet -->
+  	<servlet>
+		<servlet-name>mvc</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:/beans.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>mvc</servlet-name>
+		<!-- 加个后缀，方便拦截动态请求 -->
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
   
   
 </web-app>
