--- a/Shopping/pom.xml
+++ b/Shopping/pom.xml
@@ -123,6 +123,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.39</version>
 		</dependency>
+		<dependency>
+		    <groupId>javax-mail</groupId>
+		    <artifactId>javax.mail</artifactId>
+		    <version>1.6.0</version>
+		</dependency>
 	</dependencies>
 
 	<groupId>com.yc</groupId>
