--- a/Shopping/src/main/webapp/WEB-INF/web.xml
+++ b/Shopping/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>Shopping</display-name>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
-  <!-- 配置字符过滤器 -->
-    <filter>
-        <filter-name>charsetFilter</filter-name>
-        <filter-class>com.yc.shopping.filter.EncodingFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>charsetFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<display-name>Shopping</display-name>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	<!-- 配置字符过滤器 -->
+	
+	<filter>
+		<filter-name>charsetFilter</filter-name>
+		<filter-class>com.yc.shopping.filter.EncodingFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>charsetFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
-    <!-- spring 负责分发请求的 Servlet -->
-  	<servlet>
+	<!-- spring 负责分发请求的 Servlet -->
+	<servlet>
 		<servlet-name>mvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -29,6 +33,6 @@
 		<!-- 加个后缀，方便拦截动态请求 -->
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-  
-  
+
+
 </web-app>
