--- a/Shopping/src/main/webapp/WEB-INF/web.xml
+++ b/Shopping/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	version="3.1">
 	<display-name>Shopping</display-name>
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>start.jsp</welcome-file>
 	</welcome-file-list>
 	<!-- 配置字符过滤器 -->
 	
